--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>David Stinnette</h1>
+                        <h1>david stinnette</h1>
                         <h2>(business + software) developer</h2>
                         <br>
                         <ul class="list-inline intro-social-buttons">
@@ -68,11 +68,11 @@
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">About me</h2>
+                    <h2 class="section-heading">Hi, I'm David</h2>
                     <p class="lead">
-                      Hi I'm David, a software salesperson turned engineer. I'm
-                      still helping people solve problems, I'm just doing it
-                      differently by telling stories with Rails and JavaScript.
+                      I'm a former software salesperson turned engineer. I'm
+                      still helping people solve problems, I'm just doing it by
+                      telling stories with JavaScript and Rails.
                     </p>
                       <ul class="lead">
                         <li>
@@ -92,8 +92,8 @@
                         </li>
                       </ul>
                       <p class="lead">
-                        If you're looking for a developer to contribute on a
-                        motivated team, I'd love to speak with you.
+                        If you're looking for a software engineer to contribute 
+                        on a motivated team, I'd love to speak with you.
                       </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -110,7 +110,7 @@
       <div class="container">
           <div class="row">
               <div class="col-lg-4">
-                  <h2>Connect with me</h2>
+                  <h2>connect with me</h2>
               </div>
               <div class="col-lg-8">
                   <ul class="list-inline banner-social-buttons">
