--- a/index.html
+++ b/index.html
@@ -32,35 +32,37 @@
 
 <body>
 
-    <div class="intro-header">
-        <div class="container">
+    <div class="background-image-hiking">
+        <div class="intro-header">
+            <div class="container">
 
-            <div class="row">
-                <div class="col-lg-6"></div>
-                <div class="col-lg-6">
-                    <div class="intro-message">
-                        <h1>david stinnette</h1>
-                        <h2>software (developer + instructor)</h2>
-                        <br>
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-github"></i> <span class="network-name"></span></a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://medium.com/@dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-medium"></i> <span class="network-name"></span></a>
-                            </li>
-                        </ul>
-                        <br>
+                <div class="row">
+                    <div class="col-lg-6"></div>
+                    <div class="col-lg-6">
+                        <div class="intro-message">
+                            <h1>david stinnette</h1>
+                            <h2>software (developer + instructor)</h2>
+                            <br>
+                            <ul class="list-inline intro-social-buttons">
+                                <li>
+                                    <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-github"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
+                                </li>
+                                <li>
+                                    <a target="_blank" href="https://medium.com/@dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-medium"></i> <span class="network-name"></span></a>
+                                </li>
+                            </ul>
+                            <br>
+                        </div>
                     </div>
-                </div>
-            </div><br><br><br><br><br><br><br><br><br><br><br><br>
+                </div><br><br><br><br><br><br><br><br><br><br><br><br>
 
+            </div>
         </div>
     </div>
 
